--- a/first.html
+++ b/first.html
@@ -3,6 +3,6 @@
         git document
     </head>
     <body>
-        Welcome too GIT
+        Welcome too GIT, This is my first git project and add css styles here
     </body>
 </html>
